@@ -7352,6 +7352,8 @@ void CLASS adobe_coeff (const char *t_make, const char *t_model)
 	{ 6559,-1752,-491,-3672,11407,2586,-962,1875,5130 } },
     { "Panasonic DMC-GX1", 143, 0,
 	{ 6763,-1919,-863,-3868,11515,2684,-1216,2387,5879 } },
+    {"Panasonic DMC-GX7",143,0,
+     {7541,-2355,-591,-3163,10598,1894,-933,2109,5006}},
     { "Phase One H 20", 0, 0,		/* DJC */
 	{ 1313,1855,-109,-6715,15908,808,-327,1840,6020 } },
     { "Phase One H 25", 0, 0,
